# Xag-MultiViewer

./: CMakeLists.txt  CameraCardWidget.cpp  CameraCardWidget.h  CameraDraft.h  CameraInstance.h  CameraManager.cpp  CameraManager.h  ConnectTab.cpp  ConnectTab.h  CreateCameraDialog.cpp  CreateCameraDialog.h  EditCameraDialog.cpp  EditCameraDialog.h  HomeTab.cpp  HomeTab.h  LrfWorker.cpp  LrfWorker.h  OverlayWidget.cpp  OverlayWidget.h  SkydroidDriver.cpp  SkydroidDriver.h  VideoEngine.cpp  VideoEngine.h  VideoWidget.cpp  VideoWidget.h  deployment.iss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
android_b/: AndroidManifest.xml
dronelogger/_internal/drone_logs/session_2026-05-31_19-01-30/: drone_1_log_19-01-31.csv  drone_1_log_19-03-25.csv
dronelogger/_internal/fastcrc/: fastcrc.cp313-win_amd64.pyd
dronelogger/_internal/numpy-2.4.4.dist-info/: RECORD
dronelogger/_internal/pymavlink-2.4.49.dist-info/: RECORD
dronelogger/_internal/pymavlink/dfindexer/: dfindexer_cy.cp313-win_amd64.pyd
resources/: style.qss
